# GPIO_BareMetal

./: .cproject  .gitignore  .project  CMakeLists.txt  GPIO_BareMetal Debug.launch  GPIO_BareMetal.map  GPIO_Output_BareMetal Debug.launch  README.md  STM32L476RGTX_FLASH.ld  STM32L476RGTX_RAM.ld  buildRunner.sh  flash.sh
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Debug/: BareMetalProgramming.elf  BareMetalProgramming.list  BareMetalProgramming.map  GPIO_Output_BareMetal.elf  GPIO_Output_BareMetal.list  GPIO_Output_BareMetal.map  makefile  objects.list
Debug/Src/: main.cyclo  main.d  main.su  subdir.mk
Debug/Startup/: subdir.mk
Devices/: LPS25HB.hpp  Mcp23S08.hpp
Drivers/CMSIS/Device/ST/STM32L4xx/Source/: system_stm32l4xx.cpp
Inc/: Adc.hpp  Button.hpp  Config.hpp  Gpio.hpp  GpioInput.hpp  GpioOutput.hpp  I2C.hpp  LCD_TFT_ST7735S.hpp  LPS25HB.hpp  Mcp23S08.hpp  Pwm.hpp  Spi.hpp  Timer.hpp  Uart.hpp  config.hpp  gpio.hpp  main.h
Peripherals/Adc/: Adc.hpp  AdcChannel.hpp  AdcDmaChannel.hpp  InterfaceAdcChannel.hpp
Peripherals/Dma/: DmaChannel.cpp  DmaChannel.hpp  DmaRequest.hpp
Peripherals/Gpio/: GpioAlternate.hpp  GpioAnalog.hpp  GpioInput.hpp  GpioOutput.hpp  IGpio.hpp
Peripherals/I2C/: I2C.hpp  I2cInterface.hpp
Peripherals/Pwm/: Pwm.hpp  PwmChannelInput.hpp  PwmChannelOutput.hpp
Peripherals/Spi/: ISpi.hpp  ISpiPins.hpp  Spi.hpp  SpiPins.hpp  SpiPinsFullDuplex.hpp  SpiPinsHalfDuplexRX.hpp  SpiPinsHalfDuplexTX.hpp
Src/: GpioTests.cpp  Spi.cpp  Timer.cpp  Uart.cpp  gpio.cpp  main.cpp  syscalls.c
UnitTests/: CMakeLists.txt  GpioTests.cpp  UARTTests.cpp
cmake/: compiler_flags.cmake  toolchain-arm-gcc.cmake
